--- a/ex/infographieIDF.html
+++ b/ex/infographieIDF.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8">
     <meta content="width=device-width" name="viewport">
     <meta content="" name="description">
-    <link href="../css/infographieIDF.css" media='screen' rel='stylesheet' type='text/css'>
-    <link href="../css/infographieIDFprint.css" media='print' rel='stylesheet' type='text/css'>
+    <link href="css/infographieIDF.css" media='screen' rel='stylesheet' type='text/css'>
+    <link href="css/infographieIDFprint.css" media='print' rel='stylesheet' type='text/css'>
     <title></title>
 </head>
 
@@ -23,15 +23,15 @@
     <div class="b3-3">
         <h2 class="t3-3 orange">Trois grands domaines</h2>
         <div class="i1-3 premier centrer">
-            <img alt="" src="../img/img1.png">
+            <img alt="" src="img/img1.png">
             <h3 class="taille2 lignehaute">Protection de l'environnement</h3>
         </div>
         <div class="i1-3 milieu centrer">
-            <img alt="" src="../img/img2.png">
+            <img alt="" src="img/img2.png">
             <h3 class="taille2 lignehaute">Gestion des ressources</h3>
         </div>
         <div class="i1-3 dernier centrer">
-            <img alt="" src="../img/img3.png">
+            <img alt="" src="img/img3.png">
             <h3 class="taille2 lignehaute">Activités trasversalles</h3>
         </div>
     </div>
@@ -39,7 +39,7 @@
         <h2 class="t3-3 bleu">Exemples de professions vertes</h2>
 
         <div class="i1-3 blanc premier lignehaute alignbas">
-            <img alt="" class="flottegauche" src="../img/img4.png">
+            <img alt="" class="flottegauche" src="img/img4.png">
             <h3 class="taille2 lignehaute">Agent de station d'épuration</h3>
             <p class="clear"><span>Formation</span> : CAP à Bac+2</p>
             <p><span>Salaire</span> : 1118€ à 1700€</p>
@@ -52,7 +52,7 @@
         </div>
 
         <div class="i1-3 blanc milieu lignehaute alignbas">
-            <img alt="" class="flottegauche" src="../img/img5.png">
+            <img alt="" class="flottegauche" src="img/img5.png">
             <h3 class="taille2 lignehaute">Garde forestier et garde chasse</h3>
             <p class="clear"><span>Formation</span> : Sans diplôme
                 <br/>Brevet des collèges</p>
@@ -64,7 +64,7 @@
         </div>
 
         <div class="i1-3 blanc dernier lignehaute alignbas">
-            <img alt="" class="flottegauche" src="../img/img6.png">
+            <img alt="" class="flottegauche" src="img/img6.png">
             <h3 class="taille2 lignehaute">Eboueur</h3>
             <p class="clear"><span>Formation</span> : CAP à Bac+2</p>
             <p><span>Salaire</span> : 1118€ à 1700€</p>
@@ -91,7 +91,7 @@
     <div class="b1-2 blocgauche haut280 alignhaut">
         <h2 class="t1-2 violet">Des métiers jeunes</h2>
         <div class="i1-2 centrer">
-            <img alt="" src="../img/img7.png">
+            <img alt="" src="img/img7.png">
             <h3 class="taille2"><span class="taille3 texteviolet">32% </span> des actifs ont moins de 30 ans</h3>
         </div>
     </div>
@@ -99,7 +99,7 @@
         <h2 class="t1-2 vert">Accessibles à tous niveaux d'études</h2>
         <div class="i1-2 centrer">
             <h3 class="grossemarge taille2">Vous cherchez un contrat d'apprentissage dans l'un des métiers verts ?</h3>
-            <p><img alt="" class="" src="../img/img8.png">
+            <p><img alt="" class="" src="img/img8.png">
 
                 <a href="#" class="boutonclic vert">Cliquez ici</a></p>
 
@@ -107,7 +107,7 @@
     </div>
     <div class="b3-3 alignbas">
         <h2 class="t3-3 bleufonce">... Et stables</h2>
-        <img alt="" class="inline" src="../img/img9.png">
+        <img alt="" class="inline" src="img/img9.png">
         <p class="taille3 gras inline"><span class="taille4 textebleufonce">92% </span>de salariés en CDI</p>
     </div>
 </body>
